--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "@stomp/stompjs": "^6.1.2",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "socket.io-client": "^4.5.1",
     "sockjs-client": "^1.6.1",
     "vue": "^3.2.13",
-    "vue-axios": "^3.4.1",
     "vue-qrcode-reader": "^3.1.0",
     "vue-resource": "^1.5.3",
-    "vuex": "^4.0.2",
-    "websocket": "^1.0.34"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
