--- a/package.json
+++ b/package.json
@@ -1,49 +1,30 @@
 {
   "name": "qrref-front",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@stomp/stompjs": "^6.1.2",
-    "axios": "^0.27.2",
-    "core-js": "^3.8.3",
+    "axios": "^1.6.8",
+    "core-js": "^3.37.0",
+    "flowbite": "^2.3.0",
+    "flowbite-vue": "^0.1.4",
     "sockjs-client": "^1.6.1",
-    "vue": "^3.2.13",
-    "vue-qrcode-reader": "^3.1.0",
+    "vue": "^3.4.22",
     "vue-resource": "^1.5.3",
-    "vuex": "^4.0.2"
+    "vue3-apexcharts": "^1.5.2",
+    "vue3-qrcode-reader": "^0.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.8"
+  }
 }
