--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "core-js": "^3.37.0",
     "flowbite": "^2.3.0",
     "flowbite-vue": "^0.1.4",
+    "qrcode-reader-vue3": "^3.1.2",
     "sockjs-client": "^1.6.1",
     "vue": "^3.4.22",
     "vue-resource": "^1.5.3",
-    "vue3-apexcharts": "^1.5.2",
-    "vue3-qrcode-reader": "^0.0.1"
+    "vue3-apexcharts": "^1.5.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
